--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks & Tutorials"
+  - title: "Talks, Tutorials & Teaching"
     url: /talks/
         
   - title: "Blog Posts"
